Resolved bug with loading element in tree explorer -> loading is no more behind precision bar

--- a/fe/style.css
+++ b/fe/style.css
@@ -32,6 +32,7 @@ body {
 }
 
 #loading-indicator {
+    z-index: 999;
     text-align: center;
     background: #fff;
     border-radius: 24px;
